<resources>
    <string name="app_name">Network Monitor</string>
    <string name="action_settings">Ustawienia</string>
    <string name="signal_strength">Poziom odbieranego sygnału:</string>
    <string name="signal_strength_dbm"></string>
    <string name="operator_name">Operator:</string>
    <string name="operator_name_value"></string>
    <string name="network_type">Typ sieci komórkowej:</string>
    <string name="network_type_value"></string>
    <string name="imei_1">IMEI:</string>
    <string name="country_name">Country:</string>
    <string name="cell_info">CELL INFO:</string>
    <string name="serving_name">Serving:</string>
    <string name="rsrp_name">RSRP:</string>
    <string name="rsrq_name">RSRQ:</string>
    <string name="rssnr_name">RSSNR:</string>
    <string name="asu_name">ASU:</string>
    <string name="ci_name">CI:</string>
    <string name="pci_name">PCI:</string>
    <string name="tac_name">TAC:</string>
    <string name="neighbor_name">Neighbor:</string>
</resources>
